# liteskill-vr

./: .editorconfig  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  CLAUDE.md  README.md  Taskfile.yml  eslint.config.js  index.html  knip.config.ts  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/assets/: site.css
docs/guide/: agents.html  architecture.html  building.html  data-model.html  file-formats.html  first-project.html  getting-started.html  headless-mcp.html  how-it-works.html  index.html  installation.html  interface.html  introduction.html  mcp-tools.html  security.html
e2e/: app.e2e.ts  tsconfig.json
fixtures/: demo-project.json
scripts/: check-docs.mjs  check-parity.mjs  release.sh  sync-version.sh
spec/: README.md  acp.md  architecture.md  call-graph.md  chat.md  data-model.md  explanations.md  file-formats.md  mcp.md  overview.md  security.md  ui.md
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fixture.rs  lib.rs  main.rs
src-tauri/src/db/: connection_types.rs  connections.rs  error.rs  evidence.rs  explanation.rs  ioi.rs  items.rs  migrations.rs  mod.rs  models.rs  notes.rs  project.rs  search.rs  tags.rs
src-tauri/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/tests/: mcp_integration.rs
src/components/: ConnectionMap.tsx  Dashboard.tsx  Explanations.tsx  ItemDetail.tsx  ModalLayer.tsx  SeverityBadge.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Vocabulary.tsx
src/lib/: forms.ts  ipc.ts  store.ts  types.ts
