[package]
name = "liteskill-vr"
version = "0.1.1"
description = "Structured notebook for reverse engineering research"
license = "Apache-2.0"
authors = []
edition = "2021"
rust-version = "1.77"
publish = false

[lib]
name = "liteskill_vr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync"] }
rmcp = { version = "1.4.0", features = ["transport-streamable-http-server", "server"] }
http = "1.4.0"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
