[package]
name = "liteskill-vr"
version = "0.1.4"
description = "Structured notebook for reverse engineering research"
license = "Apache-2.0"
authors = []
edition = "2021"
rust-version = "1.77"
publish = false
default-run = "liteskill-vr"

# Lint policy lives here (Cargo 1.74+ `[lints]`) rather than in
# .cargo/config.toml rustflags: it applies only to this crate (not its
# dependencies) and does not invalidate the build cache between `cargo build`,
# `cargo clippy`, and rust-analyzer. Lints are kept at `warn` here; CI and the
# git hooks run clippy with `-D warnings` (see `task rs:clippy`) to make them
# hard failures.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic/nursery lints that are too noisy for this codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-build"]

[lib]
name = "liteskill_vr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "liteskill-vr"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "liteskillvr-mcp"
path = "src/bin/mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "signal", "macros"] }
rmcp = { version = "1.4.0", features = ["transport-streamable-http-server", "transport-io", "server"] }
http = "1.4.0"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
